--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,8 @@
     "\n",
     "def distance_all(selected_individual, neighbors):\n",
     "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))"
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))\n",
+    "\n"
    ]
   },
   {
